src/styles/_layout.sass
@import tailwind-variables
@import variables

$vertical-header-spacing: 8px
$right-left-layout-spacig: 16px
$layout-height: 792px
$inner-padding: 16px

// Public layout
.public-layout
	overflow: auto
	background: $backgroundColor-notino-grayLight
	min-height: 100vh
	height: 100%

	.layout-wrapper
		max-width: 1280px
		width: 100%
		position: relative

	.layout-content
		border-radius: 4px
		// box-shadow: $boxShadow-xl
		box-shadow: $content-box-shadow
		min-height: 760px

	.cover
		object-fit: cover
		width: 100%
		height: 100%

	.content
		background-color: rgba(255,255,255,.8)
		border-radius: .25em
		box-shadow: 0 0 .25em rgba(0,0,0,.25)
		box-sizing: border-box
		left: 50%
		padding: 10vmin
		position: fixed
		text-align: center
		top: 50%
		transform: translate(-50%, -50%)
	.btn-back
		a
			svg
				color: $textColor-notino-pink !important
			span
				color: $textColor-notino-pink !important

	@media (max-width: 1280px)
		.layout-wrapper
			max-width: 744px

	@media (max-width: 744px)
		.layout-wrapper
			max-width: 440px
			min-height: 500px

	@media (max-width: 640px)
		h3, .heading-3
			font-size: 1.25rem
			line-height: 1.5rem

		.ant-form-item-label, .ant-form-vertical .ant-form-item-label
			margin-bottom: 0

.noti-login-page
	@media (max-width: 744px)
		.layout-wrapper
			max-width: 328px

.noti-support-contact-page
	height: 100% !important
	min-height: 100vh
	@media (max-width: 744px)
		padding: 16px
		.layout-wrappwer
			min-height: 500px

// Main layout
.ant-layout.noti-main-layout
	.noti-sider-menu
		.ant-menu-item-group-title
			display: none
		.noti-sider-main-group
			.ant-menu-item-group-list
				height: 100%
				overflow-x: hidden
		.ant-menu-item
			color: $textColor-notino-black

			&.ant-menu-item-selected
				color: $textColor-notino-white
				background-color: $backgroundColor-notino-black
				svg
					filter: invert(1)

			&:active:not(.ant-menu-item-selected)
				background-color: $backgroundColor-notino-grayLighter

			&:hover:not(.ant-menu-item-selected)
				background-color: $backgroundColor-notino-grayLighter

		&.ant-menu-inline, &.ant-menu-inline-collapsed
			.ant-menu-item, .ant-menu-submenu .ant-menu-submenu-title
				display: flex
				align-items: center

			.ant-menu-item:not(:last-child)
				margin-bottom: 4px

			.ant-menu-submenu
				.ant-menu-submenu-title
					&::after
						position: absolute
						top: 0
						right: 0
						bottom: 0
						border-right: 3px solid $borderColor-notino-black
						transform: scaleY(0.0001)
						opacity: 0
						transition: transform 0.15s cubic-bezier(0.215, 0.61, 0.355, 1), opacity 0.15s cubic-bezier(0.215, 0.61, 0.355, 1)
						content: ''
				&.ant-menu-submenu-selected > .ant-menu-submenu-title
					&::after
						transform: scaleY(1)
						opacity: 1
						transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.15s cubic-bezier(0.645, 0.045, 0.355, 1)

	.ant-layout-sider
		position: sticky
		height: 100vh
		top: 0
		display: flex
		flex-direction: column
		padding: 0
		.ant-layout-sider-children
			height: calc(100% - 48px)
		.noti-my-account
			max-width: calc(100% - 24px)
			.item-label
				max-width: 100%
		&.ant-layout-sider-collapsed
			.noti-sider-menu
				.noti-account-menu-item
					padding: 0 4px !important
					.ant-avatar-image
						flex: 0 0 auto
						width: 32px
						height: 32px
						position: relative
				.ant-menu-item:not(.noti-account-menu-item), .ant-menu-item-selected:not(.noti-account-menu-item)
					padding-left: 8px
					padding-right: 8px
					.ant-menu-item-icon
						flex: 0 0 auto
		.ant-layout-sider-trigger
			background-color: $backgroundColor-notino-grayLight
			height: 48px
			display: flex
			align-items: center
			justify-content: flex-end
			padding-right: 20px
			position: relative
		.noti-account-menu-item
			position: relative
			.ant-menu-title-content
				position: absolute
				left: -8px
				right: 0
				bottom: 0
				top: 0
				.ant-dropdown-trigger
					padding: 0 0 0 48px


.ant-menu-inline-collapsed-tooltip,
.ant-dropdown-menu-inline-collapsed-tooltip
	display: none

// 	.noti-content
// 		padding: $header-height $right-left-layout-spacig 0 $right-left-layout-spacig
// 		.content-header
// 			// NOTE: ak by v headeri bol niekedy nejaky koncet ktory musi byt vedla seba a nie pod seba ako je takto defaultne tak pretazit nejakou classou flex-direction na row
// 			display: flex
// 			flex-direction: column
// 			justify-content: space-between
// 			z-index: $z-index-content-header
// 			position: sticky
// 			top: 12px
// 			min-height: 76px // Miesto potrebne pre breadcrumbs + Button / Tabs + spacing medzi breadcrumbami a buttonami / tabami
// 			margin: -$vertical-header-spacing -24px 16px -24px
// 			box-shadow: $boxShadow-lg
// 			background-color: $backgroundColor-white
// 			padding: 8px 24px 8px 24px
// 			width: calc(100% + 40px)
// Content
.content-body
	background: $backgroundColor-white
	padding: 24px
	margin-top: 8px
	border-radius: 4px
	// box-shadow: $boxShadow-xl
	box-shadow: $content-box-shadow
	margin-bottom: 24px
	width: 100%
	&.floating // cena sirka aj vyska bez marginov / paddingov so sedym pozadim na ktore idu biele formy a ine informacie (eg: dokoncenie-rezervacie)
		min-height: calc(100vh - #{$header-height} - 80px - 56px) // 100vh - header - breadcrumbs - footer
		margin-bottom: 0
		padding: 0
		width: calc(100% + 38px)
		background: $backgroundColor-gray-50
		margin: -16px -24px -24px -24px
		.floating-content-wrapper
			min-height: calc(100vh - #{$header-height} - 80px - 56px)
	&.small
		width: 50%
		margin-left: auto
		margin-right: auto
	&.medium
		width: 75%
		margin-left: auto
		margin-right: auto
	&.without-content-footer
		.floating-content-wrapper
			min-height: calc(100vh - 80px - 81px) // 100vh - header - breadcrumbs
	&.dashboard-content
		max-width: 1200px
		margin: 0 auto
		width: 100%
		background: transparent
		box-shadow: none
	@media (max-width: 1700px)
		&.small
			width: 75%
	@media (max-width: 1200px)
		&.small, &.medium
			width: 100%
	// footer
	.content-footer
		position: sticky
		bottom: 0
		border-bottom-left-radius: 4px
		border-bottom-right-radius: 4px
		min-height: $footer-height
		width: calc(100% + 48px)
		margin-left: -24px
		margin-top: 24px
		margin-bottom: -24px
		background: $backgroundColor-gray-50
		padding: 10px 24px 10px 24px
		z-index: $z-index-five
	// sticky hlavicka v contente
	.content-header
		display: flex
		z-index: $z-index-content-header
		position: sticky
		top: 64px
		min-height: 60px
		margin: -24px -24px 16px -24px
		// box-shadow: $boxShadow-lg
		background-color: $backgroundColor-notino-white
		padding: 10px 24px
		width: calc(100% + 48px)
		&.warning
			background: $backgroundColor-yellow-50

.content-body-width
	&-floating
		width: calc(100% + 38px)
	&-small
		width: 50%
		margin: 0 auto
	&-medium
		width: 75%
		margin: 0 auto
	@media (max-width: 1700px)
		&-small
			width: 75%
	@media (max-width: 1200px)
		&-small, &-medium
			width: 100%

// Dropdown pre MENU
.noti-layout-popup
	.ant-menu.ant-menu-sub
		border-radius: 0 0 4px 4px
		background: $backgroundColor-white
		padding: 4px
	li.ant-menu-item
		display: flex
		align-items: center
		margin-top: 8px
		padding: 10px 16px 10px 16px
		&:first-child
			margin-top: 0
		&.ant-menu-item-selected
			background-color: transparent !important
			&:hover
				svg, span.ant-menu-title-content
					color: $textColor-blue-600 !important
			svg, span.ant-menu-title-content
				color: $textColor-blue-600 !important
		&:hover
			background-color: $backgroundColor-gray-100 !important
			border-radius: 4px
			svg, span.ant-menu-title-content
				color: $textColor-gray-900 !important
	.ant-menu-title-content
		color: $textColor-gray-600

// header
.header-salon-label
	color: $textColor-notino-black
	.icon-dropdown
		flex: 0 0 auto

.header-avatar
	flex: 0 0 auto
	// border: 1px solid $borderColor-notino-grayLight

.selected-salon-text
	color: $textColor-notino-grayDark
	white-space: nowrap
	overflow: hidden
	text-overflow: ellipsis
	min-width: 0

.ant-dropdown
	.ant-dropdown-menu
		&.noti-dropdown-header
			padding: 8px 0
			.ant-dropdown-menu-item,
			.ant-dropdown-menu-submenu-title,
			.ant-dropdown-menu-item:active
				color: $textColor-notino-black
				background-color: transparent

				.ant-dropdown-menu-title-content
					white-space: nowrap
					text-overflow: ellipsis
					overflow: hidden
					min-width: 0

				&.ant-menu-item-selected,
				&.ant-menu-item-selected:active
					color: $textColor-notino-white
					background-color: $backgroundColor-notino-black
					svg
						filter: invert(1)

				&:hover:not(.ant-menu-item-selected)
					background-color: $backgroundColor-notino-grayLighter

				&.button-add
					color: $textColor-notino-pink
					padding: 8px
					margin-top: 8px

			.ant-dropdown-menu-item-group
				.ant-dropdown-menu-item-group-title
					padding: 0

// Avatar
.avatar
	flex-shrink: 0
	height: 120px
	width: 120px
	border-radius: 50%
	background-repeat: no-repeat
	background-position: center center
	background-size: cover
	border: 1px solid $borderColor-gray-100
	box-shadow: $boxShadow-lg
	&.small
		height: 28px
		width: 28px

span.language-picker-icon.anticon
	font-size: 24px

.language-picker
	.ant-dropdown-menu-submenu-title
		display: flex
		align-items: center

